--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .gradient-text {
+    @apply bg-gradient-to-tr from-lime-500 to-cyan-400 bg-clip-text text-transparent;
+  }
+}
+
